
* Documentation improvements:
workflow.cs
ldap
blog about lucene.net

* relationships in print?
* change history in print?
* images in print?

how to pick a bug tracker

sending email as guest

project custom dropdown?

-----------------------------------------------------------------------
Version 3.0.4   11/xx/2008 
-----------------------------------------------------------------------

see what the guy did with the orgs query



* Added ability for admin to try to resend unsent emails.  The system
tries to resend automatically anyway whenever there is a new 
notification, but the new feature lets an admin do it explicitly.

* Fixed bug in relationships page when trying to add a relationship
after deleting one.

-----------------------------------------------------------------------
Version 3.0.3   11/24/2008 
-----------------------------------------------------------------------

Everybody who downloaded 3.0.2 should replace it with this release.

Fixed bug in bug.cs, line 1168, when sending a notification email.

-----------------------------------------------------------------------
Version 3.0.2   11/21/2008 
-----------------------------------------------------------------------

* New feature: Field level permissions for custom fields. You can 
control which organizations can view/edit which custom fields.

Minor bug fixes:

* Fixed bug with the list of users shown in edit_bug.aspx dropdowns
when the viewer had no permissions to for other organizations.  Users
from other organizations were being shown.

* Fixed to svn_diff.asxp to work with newer versions of Subversion,
thanks to Christian Hoffmann.

* Fixed bug related to showing images inline. When the attachment was 
an .ini file, the user was wrongly being prompted to download the file.

* Fixed bug 2323190 "Top button doesn't change on copy bug"

-----------------------------------------------------------------------
Version 3.0.1   11/14/2008 